# Finite-Element-Solver

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  BACKLOG.md  BoundaryConditions.py  CODE_REVIEW.md  Elements.py  Energies.py  Energy.py  EnergySolver.py  FEMesh.py  Mesh.py  NEXT_STEPS.md  Plotter.py  README.md  REFACTOR_PLAN.md  Solution.py  Solver.py  Tests.py  TopologyOptimizer.py  base_solver.py  boundary_conditions.py  environment.txt  environment.yml  file_io.py  finite_element_2d.py  heat_solver.py  linear_elastic_solver.py  main.py  plotting.py  poisson_solver.py  profile.txt  projection_solver.py  pyproject.toml  quadrature.py  refinement.py  requirements.txt  rho_bistable1.pkl  (+9 more)
.github/workflows/: ci.yml
applications/cage_shape_optimization/: helper.py  main.py
applications/spring_design/: density_drawer.py  spring_design.py  spring_results.py  spring_rho.py
examples/: benchmark_assembly.py  cli.py  demo_registry.py  generate_mesh.py  meshing_demos.py  refinement_demo.py  solver_demos.py
fem/: __init__.py  boundary.py  elements.py  energies.py  energy_solver.py  fields.py  forms.py  geometry.py  integrators.py  io.py  materials.py  numerics.py  problem.py  regions.py  solution.py  solve.py  solver.py  space.py  svg.py  system.py  topology.py  typing.py
fem/mesh/: __init__.py  femesh.py  generation.py  mesh.py  refinement.py  svg.py  tetmesh.py
fem/plot/: __init__.py  helpers.py  plotter.py  tet.py
files/: mesh_60x30.json  mesh_90x30.json
meshes/: .gitignore  100x10.pkl  100x20.json  100x20.pkl  100x5.pkl  160x80.pkl  20x20.json  40x40.json  40x40.pkl  40x80.pkl  80x40.json  80x40.pkl  80x80.pkl  L_mesh.pkl  airfoil_mesh.pkl  bar_mesh.pkl  beam6000_mesh.pkl  beam_mesh.pkl  bracedcantilever_mesh.pkl  densehole_mesh.pkl  densesquare_mesh.pkl  doubleslit_pslg.pkl  easy_rectangle.pkl  hole1000_mesh.pkl  hole_mesh.pkl  obstacle_mesh.pkl  points.pkl  regular_mesh3.pkl  square1000_mesh.pkl  square100_mesh.pkl  square20_mesh.pkl  square3000_mesh.pkl
tests/: conftest.py  test_assembly.py  test_convergence.py  test_convergence_elasticity.py  test_convergence_heat.py  test_elasticity_models.py  test_forms.py  test_helpers.py  test_io.py  test_problem.py  test_refinement.py  test_refinement_conformity.py  test_regions.py  test_regressions.py  test_smoke.py  test_solvers.py  test_space.py  test_system.py  test_topology.py  test_topology_optimization.py  test_validation.py
utils/: base_solver.py  demos.py  file_io.py  half_edge.py  helper.py  linalg.py  matrices.py  measures.py  mesh.py  meshing.py  plotting.py  refinement.py  tet.py
