[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "finite-element-solver"
version = "0.1.0"
description = "A finite element method solver for 2D/3D PDEs, with custom meshing, adaptive refinement, and topology optimization."
readme = "README.md"
requires-python = ">=3.10"
# Abstract (unpinned) runtime deps: what the library needs to import and run.
# Reproducible, pinned versions for development live in requirements.txt.
dependencies = [
    "numpy",
    "scipy",
    "plotly",
    "kaleido",
]

[project.optional-dependencies]
# 3D tetrahedral mesh generation (fem.mesh.tetmesh). pyvista is here as tetgen's
# data interchange format (PolyData/UnstructuredGrid in, out), not a rendering
# dependency -- 3D meshes render through fem.plot like everything else, via
# their boundary faces.
mesh3d = ["pyvista", "tetgen"]
# SVG-outline meshing (fem.mesh.svg). matplotlib rides along here rather than
# as a core dependency: it backs the interactive Douglas-Peucker widget (hasn't
# migrated to Plotly, see BACKLOG.md) and fem.numerics's check_gradient/
# check_hessian dev diagnostics (deferred imports, only needed if re-enabled).
svg = ["svg.path", "matplotlib"]

# Development tooling (installed by default with `uv sync`)
[dependency-groups]
dev = ["pytest", "ruff"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# Pyflakes (F) catches real problems (unused imports, undefined names); the
# E4/E7/E9 subset covers import/statement/runtime errors without line-length noise.
select = ["E4", "E7", "E9", "F"]

[tool.setuptools.packages.find]
include = ["fem*"]

[tool.pytest.ini_options]
# The package is installed (pip install -e .), so tests import `fem` directly;
# no sys.path shim needed.
testpaths = ["tests"]
