[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "finite-element-solver"
version = "0.1.0"
description = "A finite element method solver for 2D/3D PDEs, with custom meshing, adaptive refinement, and topology optimization."
readme = "README.md"
requires-python = ">=3.10"
# Abstract (unpinned) runtime deps: what the library needs to import and run.
# Reproducible, pinned versions for development live in requirements.txt.
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]

[project.optional-dependencies]
# 3D tetrahedral meshing / rendering (fem.mesh + fem.plot.tet)
viz3d = ["pyvista", "tetgen"]
# SVG-outline meshing (fem.mesh.svg)
svg = ["svg.path"]

# Development tooling (installed by default with `uv sync`)
[dependency-groups]
dev = ["pytest", "ruff", "pyright"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# Pyflakes (F) catches real problems (unused imports, undefined names); the
# E4/E7/E9 subset covers import/statement/runtime errors without line-length noise.
select = ["E4", "E7", "E9", "F"]

[tool.pyright]
include = ["fem"]
pythonVersion = "3.11"
# "basic" infers types for the unannotated internals rather than demanding
# annotations everywhere, so the checker is useful while only the public API is
# typed. Tighten toward "standard" as coverage grows.
typeCheckingMode = "basic"
# The optional extras (pyvista, tetgen, svg.path) and matplotlib ship partial or
# no stubs; missing-import noise from them would drown out real findings.
reportMissingTypeStubs = false

[tool.setuptools.packages.find]
include = ["fem*"]

[tool.pytest.ini_options]
# The package is installed (pip install -e .), so tests import `fem` directly;
# no sys.path shim needed.
testpaths = ["tests"]
